# auto-EPU

./: .gitignore  README.md  pyproject.toml
auto-EPU/: keyword.py
auto_EPU/: denoise.py  figure.py  finetune_format.py  table.py  utils.py
config/: main.yaml
config/model/: openai.yaml
data/denoise_prompt/: human_message.json  system_message.json
data/denoise_prompt/fewshot_examples/: cot_fewshot_examples.jsonl  fewshot_examples.jsonl
notebooks/:  coverage_in_keyword_recommendation.ipynb   results_of_keyword_recommendation_with_different_task_description.ipynb  F1_scores_of_keyword_recommendation_with_different_roles.ipynb  README.md  figure.ipynb  table.ipynb
